# disp-lab1

./: .gitignore  Dockerfile
.github/workflows/: classroom.yml
postgres/: 20-create-persons-table.sql
src/: CMakeLists.txt  Dockerfile.run
src/NetLib/: CMakeLists.txt
src/NetLib/demo/client_server/: CMakeLists.txt  main.cpp
src/NetLib/demo/client_server/src/: DummyClientServerRoute.cpp  dummy_client_server_handler.cpp
src/NetLib/demo/server/: CMakeLists.txt  demo.yaml  main.cpp
src/NetLib/demo/server/src/: dummy_server_handler_creator.cpp
src/NetLib/external_includes/reqresp/: reqresp.h
src/NetLib/external_includes/request_handlers/: IServerReqHandler.h
src/cmake/: libs.cmake
src/persons-service/: CMakeLists.txt  main.cpp  persons.yaml
src/persons-service/bl/: PersonsFacade.cpp  PersonsFacade.h
src/persons-service/da/: IPersonsRepository.h  PersonsDA.cpp  PersonsDA.h  PostgresPersonsRepository.cpp  PostgresPersonsRepository.h
src/persons-service/dto/: PersonDTO.cpp  PersonDTO.h  PersonPatchDTO.h  PersonPostDTO.cpp  PersonPostDTO.h
src/persons-service/gateway/: PersonsGateway.cpp  PersonsServerHandler.cpp  PersonsServerHandler.h
